Grandes alterações, processo de organização de tasks, database comandos e outros